# bill-notify

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  check_setup.py  compose.yaml  config.yaml.example  pdf_passwords.yaml.example  pyproject.toml  test_basic.py  test_llm_analyzer.py  test_pdf_decryption.py
.github/workflows/: docker-build.yml
bill_notify/: auth_manager.py  calendar_sync.py  config.py  constants.py  event_builder.py  exceptions.py  gmail_fetcher.py  google_services.py  interfaces.py  llm_analyzer.py  main.py  models.py  password_providers.py  pdf_processor.py  pipeline.py
deploy/: run-supercronic.sh
tests/: test_basic.py  test_calendar_sync.py  test_config.py  test_event_builder.py  test_gmail_fetcher.py  test_llm_analyzer.py  test_password_providers.py  test_pdf_decryption.py  test_pipeline.py
