[project]
name = "bill-notify"
version = "0.1.0"
description = "Gmail bill PDF notifier with LLM and calendar integration"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.126.0",
    "google-auth-httplib2>=0.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "pypdf>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]